--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Cv/_EducationCreate.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Cv/_EducationCreate.cshtml
@@ -3,7 +3,7 @@
 
 @model EducationVO
 
-<div class="modal fade" id="EducationCreate" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade EducationCreate" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -15,7 +15,7 @@
                         @Resource.Add
                     </sub>
                 </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="CloseEducationModal()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
