--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Error/NotFound.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Error/NotFound.cshtml
@@ -1,1 +1,8 @@
-﻿
+﻿@using Physiotherapy.Common._Resources
+
+<div class="d-flex justify-content-center h-100 align-items-center">
+    <div class="alert alert-danger text-center">
+        <i class="fas fa-exclamation-circle"></i>
+        @Resource.NotFound
+    </div>
+</div>
