--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Register/Register.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Register/Register.cshtml
@@ -12,6 +12,7 @@
 
 <div class="container">
     <div class="mb-1">
+        @Html.Partial("_Messages")
         <div class="row">
             <div class="col">
                 <div class="card bg-light">
