--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Styles/CustomClass/custom-class.css
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Styles/CustomClass/custom-class.css
@@ -29,6 +29,9 @@
     padding-top: 0;
 }
 
+.sidebar-heading {
+    border-bottom: solid 1px #00000054;
+}
 /*          Header      */
 .header {
     border-bottom: 2px solid;
