--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Error/NotAuthorized.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Error/NotAuthorized.cshtml
@@ -4,5 +4,9 @@
         <div class="alert alert-danger text-center">
             <i class="fas fa-exclamation-circle"></i>
             @Resource.NotAuthorized
+            &nbsp;
+            <button type="button" class="close" data-dismiss="alert">
+                &times;
+            </button>
         </div>
     </div>
