--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Error/NotFound.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Error/NotFound.cshtml
@@ -4,5 +4,9 @@
     <div class="alert alert-danger text-center">
         <i class="fas fa-exclamation-circle"></i>
         @Resource.NotFound
+        &nbsp;
+        <button type="button" class="close" data-dismiss="alert">
+            &times;
+        </button>
     </div>
 </div>
